2008-09-02   D. V. Wiebe <getdata@ketiltrout.net>  svn:62
	*	bindings/f77/test/Makefila.am: fix include directory

	* src/getdata.h.in src/close.c src/common.c src/getdata.c src/nframes.c
	src/open.c src/putdata.c src/spf.c: re-organised gd_entry_t again

	* src/getdata.c (_GD_DoLincom): ensure we return 0 on error

	* src/close.c (dirfile_close): return -1 instead of 1 on error

	* src/entry.c (get_entry): instead of returning the library's internal
	gd_entry_t, copy the relevant bits to a caller supplied object.  This should
	be significantly more bullet proof against unintentional metadata corruption
	* man/get_entry.3: update

	* test/Makefile.am: clean up after tests

2009-09-02  D. V. Wiebe <getdata@ketiltrout.net>  svn:61
	* man/get_entry.3 src/Makefile.am src/entry.c src/getdata.h.in: added
	get_entry()

	* src/close.c src/flush.c: Split flush.c from close.c

	* src/field_list.c src/nfields.c: Split nfields.c from field_list.c

	* src/common.c src/open.c: Moved _GD_GetLine to common.c

	* src/Makefile.am: Don't export internal symbols

2009-09-02  D. V. Wiebe <getdata@ketiltrout.net>  svn:60
	* README src/getdata.h.in: Add NO_GETDATA_LEGACY_API to getdata.h to permit
	callers to not include the legacy API.

2009-09-02  D. V. Wiebe <getdata@ketiltrout.net>  svn:59
	* configure.ac: disable all fortran bindings with one option.  Rename
	the bindings options.

2008-09-01  D. V. Wiebe <getdata@ketiltrout.net>  svn:58
	* src/getdata_legacy.c src/legacy.c: Re-implement GetFormat();

	* src/getdata.h.in: store frame offset as off64_t

	* man/dirfile_flush.3: added

	* man/dirfile_close.3: corrected for changes made in revision 57

2008-09-01  D. V. Wiebe <getdata@ketiltrout.net>  svn:57
	* man/get_error_string.3 src/errors.c: Renamed getdata_error_string to
	get_error_string so people don't think its relevance is exclusive to getdata()
	
	* src/internal.h: Suberror codes may not = 0.

	* README.cxx README.f77 README.f95 bindings/cxx/dirfile.cpp